Try fixing image 'front.jpg' being stretched out on phone.

--- a/assets/css/layout.scss
+++ b/assets/css/layout.scss
@@ -151,7 +151,7 @@ body {
 .about-us__picture {
     display: flex;
     height: auto;
-    max-height: 376px;
+    // max-height: 376px;
 }
 
 .about-us__img {
